tests/compile-fail/integration__integration__strings__compile_string_arg_too_big_gt_nulless.snap
---
source: tests/integration/strings.rs
expression: stderr
---
error: string argument too large for buffer
   ┌─ <input>:11:13
   │
11 │     nulless("abcdefghi");
   │             ^^^^^^^^^^^ requires 9 bytes
   │
   = this argument is written to a 8-byte buffer


